# scooting-with-Lonhro

./: LICENSE  README.md  package-lock.json  package.json  pyproject.toml
examples/: scooter.example.toml
infra/: docker-compose.phase1.yml
infra/mosquitto/: mosquitto.conf  passwords.example
scripts/: mock_bridge_e2e_test.py  publish_sample_telemetry.py
services/: bridge_listener.py  requirements.txt
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/telemetry/fleet-health/: route.ts
src/app/api/telemetry/latest/: route.ts
src/lib/server/: telemetryStore.ts
src/lonhro_scooters/: __init__.py  cli.py  config.py  controller.py  exceptions.py  protocol.py  security.py  transport.py
src/types/: telemetry.ts
tests/: test_config_controller.py  test_protocol.py  test_security.py
